# ProtocolPilot

./: .gitignore  README.md  e v0.2.2  labels.json  pack_build.py  pyproject.toml
.github/workflows/: ci.yml  hf-sync.yml  packs-release.yml  release.yml
packs/qpcr-starter/: RUO_LICENSE.txt  pack.yaml
packs/qpcr-starter/bom/: qpcr-basic.csv
packs/qpcr-starter/prompts/: planner.txt  reviewer.txt
packs/qpcr-starter/protocols/: qpcr-basic.json  qpcr-basic.md
packs/report-template/: LICENSE.txt  README.md  RUO_NOTICE.txt  pack.yaml  qpcr_report_template.docx  qpcr_report_template.md
packs/report-template/checklists/: qc_checklist.docx  qc_checklist.md
packs/report-template/examples/: qpcr_report_example.md
prompts/: reviewer_system.txt
protocolpilot/: .pre-commit-config.yaml  pyproject.toml  qPCR.md  ruodisclaimer.txt
protocolpilot/.github/ISSUE_TEMPLATE/: protocol_pilot.yml
protocolpilot/.github/workflows/: ci.yml  release.yml
protocolpilot/prompts/: planner_system.txt
protocolpilot/protocols/: README.md
protocolpilot/src/protocol_pilot/: __init__.py  bom.py
protocolpilot/tests/: test_schema.py
src/protocol_pilot/: guards.py
src/protocol_pilot.egg-info/: SOURCES.txt  requires.txt
tools/: pack_build.py
