[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-pilot"
version = "0.1.0"
description = "RUO protocol extraction, schema, and tooling"
readme = "README.md"
authors = [{name = "ProtocolPilot"}]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "markdown-it-py>=3.0",
  "jsonschema>=4.22",
  "click>=8.1",
  "python-slugify>=8.0",
  "pre-commit>=3.7",
]

# Tell setuptools that code lives in ./src and to find packages there
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
